--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 
 
   testImplementation 'junit:junit:4.12'
+  testImplementation 'org.mockito:mockito-core:2.15.0'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
+  androidTestImplementation "com.android.support.test.espresso:espresso-intents:3.0.2"
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+  androidTestImplementation 'org.mockito:mockito-core:2.15.0'
 }
