--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,19 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   testImplementation 'org.mockito:mockito-core:2.15.0'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation "com.android.support.test.espresso:espresso-intents:3.0.2"
+  androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   androidTestImplementation 'org.mockito:mockito-core:2.15.0'
+
+  androidTestImplementation 'com.android.support.test:runner:1.0.2'
+  androidTestImplementation 'com.android.support.test:rules:1.0.2'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
+  androidTestImplementation('com.android.support.test.espresso:espresso-contrib:2.0') {
+    exclude group: 'com.android.support', module: 'appcompat'
+    exclude group: 'com.android.support', module: 'support-v4'
+    exclude module: 'recyclerview-v7'
+  }
+
+  androidTestImplementation'com.google.dagger:dagger:2.14.1'
+  androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.13'
 }
